# orb-machines

./: .pre-commit-config.yaml  README.md  initialisers.yaml  om  pyproject.toml
initialisers/: __init__.py  base.py  centos.py  helpers.py  ubuntu.py  ubuntu.sh
machines/: controllers.py  helpers.py  main.py  models.py  views.py
orbmachines/: main.py  models.py
stacks/: main.py
