[tool.poetry]
name = "machines"
version = "0.1.0"
description = ""
authors = ["Nick Moreton <nick.moreton@torchbox.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
rich = "^13.7.1"
halo = "^0.0.31"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = "^24.3.0"
flake8 = "^7.0.0"
isort = "^5.13.2"

[tool.poetry.scripts]
m = "machines.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
